Release 2026r3