@@ -1,6 +1,7 @@
 package dk.digitalidentity.rc.attestation.service.report;
 
 import dk.digitalidentity.rc.attestation.dao.AttestationDao;
+import dk.digitalidentity.rc.attestation.dao.AttestationResponsibleCollectionDao;
 import dk.digitalidentity.rc.attestation.dao.AttestationUserRoleAssignmentDao;
 import dk.digitalidentity.rc.attestation.model.dto.ADAttestationUserDTO;
 import dk.digitalidentity.rc.attestation.model.dto.ITSystemRoleBuildAttestationDTO;
@@ -9,7 +10,9 @@ import dk.digitalidentity.rc.attestation.model.dto.enums.AttestationStatus;
 import dk.digitalidentity.rc.attestation.model.dto.enums.RoleStatus;
 import dk.digitalidentity.rc.attestation.model.dto.temporal.AttestationUserRoleAssignmentDto;
 import dk.digitalidentity.rc.attestation.model.entity.Attestation;
+import dk.digitalidentity.rc.attestation.model.entity.AttestationResponsibleCollection;
 import dk.digitalidentity.rc.attestation.model.entity.AttestationRun;
+import dk.digitalidentity.rc.attestation.model.entity.AttestationUser;
 import dk.digitalidentity.rc.attestation.model.entity.ItSystemOrganisationAttestationEntry;
 import dk.digitalidentity.rc.attestation.model.entity.ItSystemRoleAttestationEntry;
 import dk.digitalidentity.rc.attestation.model.entity.ItSystemUserAttestationEntry;
@@ -29,7 +32,7 @@ import jakarta.persistence.EntityManager;
 import jakarta.persistence.FlushModeType;
 import jakarta.persistence.PersistenceContext;
 import org.apache.commons.collections4.ListUtils;
-import org.apache.commons.lang3.StringUtils;
+import org.jspecify.annotations.NonNull;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.MessageSource;
 import org.springframework.stereotype.Service;
@@ -38,6 +41,7 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.LocalDate;
 import java.time.ZonedDateTime;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
@@ -80,6 +84,9 @@ public class AttestationReportService {
 
 	@Autowired
 	private UserRoleService userRoleService;
+
+	@Autowired
+	private AttestationResponsibleCollectionDao attestationResponsibleCollectionDao;
 
 	@PersistenceContext
 	private EntityManager entityManager;
@@ -218,9 +225,9 @@ public class AttestationReportService {
 				.assignedThroughType(getAssignedThroughTypeName(assignment.getAssignedThroughType()))
 				.inherited(assignment.isInherited())
 				.responsibleOu(assignment.getResponsibleOuName())
-				.responsibleUser(StringUtils.isNotEmpty(assignment.getResponsibleUserUuid())
-						? cachedUserService.userNameFromUuidCached(assignment.getResponsibleUserUuid())
-						: null)
+				.responsibleUserNames(
+					getResponsibleUsers(assignment)
+					)
 				.attestationStatus(verificationInformation.status)
 				.verifiedAt(verificationInformation.verifiedAt)
 				.verifiedByUserId(verificationInformation.verifiedByUserId)
@@ -261,7 +268,7 @@ public class AttestationReportService {
 																   final ZonedDateTime from, final ZonedDateTime to) {
 		VerificationAndAttestationInformationDTO verificationInformation = new VerificationAndAttestationInformationDTO();
 		final ZonedDateTime assignmentValidFrom = assignment.getValidFrom().atStartOfDay().atZone(CET_ZONE_ID);
-		if (assignment.getResponsibleUserUuid() != null) {
+		if (assignment.getResponsibleCollectionId() != null) {
 			verificationInformation = context.getItSystemUserAttestations().stream()
 					.filter(a -> Objects.equals(a.getItSystemId(), assignment.getItSystemId()))
 					.filter(a -> a.getVerifiedAt().isAfter(assignmentValidFrom) && a.getVerifiedAt().isBefore(to))
@@ -292,7 +299,7 @@ public class AttestationReportService {
 		if (assignment.getAssignedThroughType() == AssignedThroughType.ORGUNIT && verificationInformation.status == AttestationStatus.NOT_VERIFIED) {
 			// Se if an it-system responsible verified a parent ou
 			verificationInformation = context.getItSystemUserAttestations().stream()
-					.filter(a -> Objects.equals(a.getItSystemId(), assignment.getItSystemId()) && a.getResponsibleUserUuid() != null)
+					.filter(a -> Objects.equals(a.getItSystemId(), assignment.getItSystemId()) && a.getResponsibleCollectionId() != null)
 					.filter(a -> a.getVerifiedAt().isAfter(assignmentValidFrom) && a.getVerifiedAt().isBefore(to))
 					.max(Comparator.comparing(Attestation::getCreatedAt)) // Find the newest it-system user attestation for the given it-system
 					.map(attestation -> findVerificationInformationForSystemOuAttestation(assignment, attestation))
@@ -424,18 +431,19 @@ public class AttestationReportService {
 		List<ADAttestationUserDTO> result = new ArrayList<>();
 		if (settingsService.isADAttestationEnabled()) {
 			for (Attestation attestation : attestationRun.getAttestations()) {
-				List<User> users = userService.getAllByUuidIn(attestation.getUsersForAttestation().stream().map(u -> u.getUserUuid()).collect(Collectors.toSet()));
+				List<User> users = userService.getAllByUuidIn(attestation.getUsersForAttestation().stream().map(AttestationUser::getUserUuid).collect(Collectors.toSet()));
+				List<String> responsibleUsers = attestationResponsibleCollectionDao.findById(attestation.getResponsibleCollectionId()).stream()
+					.flatMap(u -> u.getUsersUuid().stream())
+					.toList();
 				result.addAll(users.stream().map(u -> ADAttestationUserDTO.builder()
 						.uuid(u.getUuid())
 						.name(u.getName())
 						.username(u.getUserId())
 						.verifiedAt(attestation.getVerifiedAt() == null ? null : LocalDate.from(attestation.getVerifiedAt()))
 						.responsibleOU(attestation.getResponsibleOuName())
-						.responsibleUser(StringUtils.isNotEmpty(attestation.getResponsibleUserUuid())
-								? cachedUserService.userNameFromUuidCached(attestation.getResponsibleUserUuid())
-								: null)
+						.responsibleUserNames(responsibleUsers)
 						.build())
-					.collect(Collectors.toList()));
+					.toList());
 			}
 		}
 		return result;
@@ -492,7 +500,13 @@ public class AttestationReportService {
 				dto.setSystemRole(userRole.getSystemRoleAssignments().stream().map(s -> s.getSystemRole().getName()).collect(Collectors.toList()));
 
 				if (relevantAttestation != null) {
-					dto.setResponsibleUser(relevantAttestation.getResponsibleUserId());
+					Long responsibleCollectionId = relevantAttestation.getResponsibleCollectionId();
+					List<String> userUuids = responsibleCollectionId != null
+						? attestationResponsibleCollectionDao.findById(responsibleCollectionId)
+							.map(AttestationResponsibleCollection::getUsersUuid)
+							.orElseGet(Collections::emptyList)
+						: Collections.emptyList();
+					dto.setResponsibleUserNames(userUuids);
 
 					ItSystemRoleAttestationEntry entryForRole = relevantAttestation.getItSystemUserRoleAttestationEntries()
 						.stream().filter(i -> Objects.equals(i.getUserRoleId(), userRole.getId()))
@@ -540,5 +554,16 @@ public class AttestationReportService {
 				.max(Comparator.comparing(Attestation::getCreatedAt))
 				.orElse(null));
 	}
+
+
+	private @NonNull List<String> getResponsibleUsers(AttestationUserRoleAssignmentDto assignment) {
+		return assignment.getResponsibleCollectionId() != null
+			? attestationResponsibleCollectionDao.findById(assignment.getResponsibleCollectionId())
+			  .map(c -> c.getUsersUuid().stream()
+						.map(u -> cachedUserService.userNameFromUuidCached(u)).toList()
+			  ).orElse(Collections.emptyList())
+			: Collections.emptyList();
+	}
+
 
 }
