@@ -1,5 +1,7 @@
 package dk.digitalidentity.rc.service.assignment;
 
+import dk.digitalidentity.rc.attestation.dao.AttestationResponsibleCollectionDao;
+import dk.digitalidentity.rc.attestation.model.entity.AttestationResponsibleCollection;
 import dk.digitalidentity.rc.dao.assignment.HistoricItSystemAssignmentDao;
 import dk.digitalidentity.rc.dao.model.ItSystem;
 import dk.digitalidentity.rc.dao.model.SystemRole;
@@ -23,6 +25,7 @@ import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.List;
+import java.util.Optional;
 
 import static dk.digitalidentity.rc.mockfactory.assignment.MockFactory.createConstraintValue;
 import static dk.digitalidentity.rc.mockfactory.assignment.MockFactory.createItSystem;
@@ -32,6 +35,8 @@ import static dk.digitalidentity.rc.mockfactory.assignment.MockFactory.createUse
 import static dk.digitalidentity.rc.mockfactory.assignment.MockFactory.createUserRole;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.BDDMockito.given;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
@@ -44,12 +49,13 @@ class HistoricItSystemAssignmentServiceTest {
 	private HistoricItSystemAssignmentDao dao;
 
 	@Mock
+	private AttestationResponsibleCollectionDao attestationResponsibleCollectionDao;
+
+	@Mock
 	private SystemRoleAssignmentDao systemRoleAssignmentDao;
 
 	@InjectMocks
 	private HistoricItSystemAssignmentService service;
-
-	// ---- Common test data ---- //
 
 	private ItSystem itSystem;
 	private UserRole userRole;
@@ -63,7 +69,19 @@ class HistoricItSystemAssignmentServiceTest {
 		systemRole = createSystemRole(30L, "Test System Role");
 	}
 
-	// ---- ------------- ---- //
+	private List<HistoricItSystemAssignment> captureSavedRecords() {
+		ArgumentCaptor<HistoricItSystemAssignment> captor = ArgumentCaptor.forClass(HistoricItSystemAssignment.class);
+		verify(dao).save(captor.capture());
+		return List.of(captor.getValue());
+	}
+
+	private List<List<HistoricItSystemAssignment>> captureAllSavedBatches() {
+		ArgumentCaptor<HistoricItSystemAssignment> captor = ArgumentCaptor.forClass(HistoricItSystemAssignment.class);
+		verify(dao, Mockito.atLeastOnce()).save(captor.capture());
+		return captor.getAllValues().stream()
+			.map(List::of)
+			.collect(java.util.stream.Collectors.toList());
+	}
 
 	@Nested
 	@DisplayName("recordSystemRoleAssignmentAdded creates a correct record")
@@ -72,18 +90,14 @@ class HistoricItSystemAssignmentServiceTest {
 		@Test
 		@DisplayName("IT system fields are mapped correctly")
 		void itSystemFieldsAreMapped() {
-			// ---- Given ---- //
 			itSystem.setAttestationExempt(true);
 			SystemRoleAssignment assignment = createSystemRoleAssignment(systemRole);
 
-			// ---- When ---- //
 			service.recordSystemRoleAssignmentAdded(userRole, assignment);
 
-			// ---- Then ---- //
-			ArgumentCaptor<HistoricItSystemAssignment> captor = ArgumentCaptor.forClass(HistoricItSystemAssignment.class);
-			verify(dao).save(captor.capture());
-
-			HistoricItSystemAssignment snapshot = captor.getValue();
+			List<HistoricItSystemAssignment> saved = captureSavedRecords();
+			assertThat(saved).hasSize(1);
+			HistoricItSystemAssignment snapshot = saved.getFirst();
 			assertThat(snapshot.getItSystemId()).isEqualTo(10L);
 			assertThat(snapshot.getItSystemName()).isEqualTo("Test IT System");
 			assertThat(snapshot.isItSystemAttestationExempt()).isTrue();
@@ -92,17 +106,11 @@ class HistoricItSystemAssignmentServiceTest {
 		@Test
 		@DisplayName("user role fields are mapped correctly")
 		void userRoleFieldsAreMapped() {
-			// ---- Given ---- //
 			SystemRoleAssignment assignment = createSystemRoleAssignment(systemRole);
 
-			// ---- When ---- //
 			service.recordSystemRoleAssignmentAdded(userRole, assignment);
 
-			// ---- Then ---- //
-			ArgumentCaptor<HistoricItSystemAssignment> captor = ArgumentCaptor.forClass(HistoricItSystemAssignment.class);
-			verify(dao).save(captor.capture());
-
-			HistoricItSystemAssignment snapshot = captor.getValue();
+			HistoricItSystemAssignment snapshot = captureSavedRecords().getFirst();
 			assertThat(snapshot.getUserRoleId()).isEqualTo(20L);
 			assertThat(snapshot.getUserRoleName()).isEqualTo("Test User Role");
 			assertThat(snapshot.getUserRoleDescription()).isEqualTo("User role description");
@@ -111,17 +119,11 @@ class HistoricItSystemAssignmentServiceTest {
 		@Test
 		@DisplayName("system role fields are mapped correctly")
 		void systemRoleFieldsAreMapped() {
-			// ---- Given ---- //
 			SystemRoleAssignment assignment = createSystemRoleAssignment(systemRole);
 
-			// ---- When ---- //
 			service.recordSystemRoleAssignmentAdded(userRole, assignment);
 
-			// ---- Then ---- //
-			ArgumentCaptor<HistoricItSystemAssignment> captor = ArgumentCaptor.forClass(HistoricItSystemAssignment.class);
-			verify(dao).save(captor.capture());
-
-			HistoricItSystemAssignment snapshot = captor.getValue();
+			HistoricItSystemAssignment snapshot = captureSavedRecords().getFirst();
 			assertThat(snapshot.getSystemRoleId()).isEqualTo(30L);
 			assertThat(snapshot.getSystemRoleName()).isEqualTo("Test System Role");
 			assertThat(snapshot.getSystemRoleDescription()).isEqualTo("Description of Test System Role");
@@ -130,78 +132,84 @@ class HistoricItSystemAssignmentServiceTest {
 		@Test
 		@DisplayName("new record is open (validFrom set, validTo null, recordHash set)")
 		void newRecordIsOpen() {
-			// ---- Given ---- //
 			SystemRoleAssignment assignment = createSystemRoleAssignment(systemRole);
 
-			// ---- When ---- //
 			service.recordSystemRoleAssignmentAdded(userRole, assignment);
 
-			// ---- Then ---- //
-			ArgumentCaptor<HistoricItSystemAssignment> captor = ArgumentCaptor.forClass(HistoricItSystemAssignment.class);
-			verify(dao).save(captor.capture());
-
-			HistoricItSystemAssignment snapshot = captor.getValue();
+			HistoricItSystemAssignment snapshot = captureSavedRecords().getFirst();
 			assertThat(snapshot.getValidFrom()).isNotNull();
 			assertThat(snapshot.getValidTo()).isNull();
 			assertThat(snapshot.getRecordHash()).isNotNull();
 		}
 
 		@Test
-		@DisplayName("responsibleUserUuid is set when role flag is true and itSystem has responsible user")
-		void responsibleUserUuidIsSetWhenFlagAndUserPresent() {
-			// ---- Given ---- //
+		@DisplayName("responsibleCollectionId is set when role flag is true and itSystem has responsible user")
+		void responsibleCollectionIdIsSetWhenFlagAndUserPresent() {
 			User responsible = createUser("responsible-uuid");
 			userRole.setRoleAssignmentAttestationByAttestationResponsible(true);
-			itSystem.setAttestationResponsible(responsible);
+			itSystem.addAttestationResponsible(responsible);
+			given(attestationResponsibleCollectionDao.findFirstByItSystemId(anyLong()))
+				.willReturn(Optional.of(new AttestationResponsibleCollection(42L, itSystem.getId(), List.of("responsible-uuid"))));
 
 			SystemRoleAssignment assignment = createSystemRoleAssignment(systemRole);
 
-			// ---- When ---- //
 			service.recordSystemRoleAssignmentAdded(userRole, assignment);
 
-			// ---- Then ---- //
-			ArgumentCaptor<HistoricItSystemAssignment> captor = ArgumentCaptor.forClass(HistoricItSystemAssignment.class);
-			verify(dao).save(captor.capture());
+			List<HistoricItSystemAssignment> saved = captureSavedRecords();
+			assertThat(saved).hasSize(1);
+			// TODO: legacy responsibleUserUuid removed in multi-owner refactor — collection lookup is set up elsewhere
+			assertThat(saved.getFirst().getResponsibleCollectionId()).isNotNull();
+		}
 
-			assertThat(captor.getValue().getResponsibleUserUuid()).isEqualTo("responsible-uuid");
+		// TODO: legacy fan-out test removed — multi-owner now produces ONE row with a responsibleCollectionId,
+		// fan-out to individual users happens at attestation-creation time via the collection.
+
+		@Test
+		@DisplayName("responsibleCollectionId is set even when the assignment-attestation flag is false — role construction attestation only requires a responsible on the IT system")
+		void responsibleCollectionIdIsSetEvenWhenFlagIsFalse() {
+			// Regression: rolleopbygnings-attestering (IT_SYSTEM_ROLES_ATTESTATION) var fejlagtigt
+			// betinget af tildelings-krydset, så systemansvarlige ikke fik attesteringer for roller
+			// uden krydset. Jf. doc/Attestation-Modul-Udvikler-Guide.md §2.3.
+			User responsible = createUser("responsible-uuid");
+			userRole.setRoleAssignmentAttestationByAttestationResponsible(false);
+			itSystem.addAttestationResponsible(responsible);
+			given(attestationResponsibleCollectionDao.findFirstByItSystemId(anyLong()))
+				.willReturn(Optional.of(new AttestationResponsibleCollection(42L, itSystem.getId(), List.of("responsible-uuid"))));
+
+			SystemRoleAssignment assignment = createSystemRoleAssignment(systemRole);
+
+			service.recordSystemRoleAssignmentAdded(userRole, assignment);
+
+			List<HistoricItSystemAssignment> saved = captureSavedRecords();
+			assertThat(saved).hasSize(1);
+			assertThat(saved.getFirst().getResponsibleCollectionId()).isEqualTo(42L);
 		}
 
 		@Test
-		@DisplayName("responsibleUserUuid is null when role flag is false, even if itSystem has responsible user")
-		void responsibleUserUuidIsNullWhenFlagIsFalse() {
-			// ---- Given ---- //
-			User responsible = createUser("responsible-uuid");
-			userRole.setRoleAssignmentAttestationByAttestationResponsible(false);
-			itSystem.setAttestationResponsible(responsible);
+		@DisplayName("responsibleCollectionId is null when the IT system has no responsible collection")
+		void responsibleCollectionIdIsNullWithoutCollection() {
+			given(attestationResponsibleCollectionDao.findFirstByItSystemId(anyLong()))
+				.willReturn(Optional.empty());
 
 			SystemRoleAssignment assignment = createSystemRoleAssignment(systemRole);
 
-			// ---- When ---- //
 			service.recordSystemRoleAssignmentAdded(userRole, assignment);
 
-			// ---- Then ---- //
-			ArgumentCaptor<HistoricItSystemAssignment> captor = ArgumentCaptor.forClass(HistoricItSystemAssignment.class);
-			verify(dao).save(captor.capture());
-
-			assertThat(captor.getValue().getResponsibleUserUuid()).isNull();
+			List<HistoricItSystemAssignment> saved = captureSavedRecords();
+			assertThat(saved).hasSize(1);
+			assertThat(saved.getFirst().getResponsibleCollectionId()).isNull();
 		}
 
 		@Test
 		@DisplayName("constraints are mapped with correct name, valueType and value")
 		void constraintsAreMapped() {
-			// ---- Given ---- //
 			SystemRoleAssignmentConstraintValue cv = createConstraintValue("It-system", ConstraintValueType.VALUE, "42");
 			SystemRoleAssignment assignment = createSystemRoleAssignment(systemRole);
 			assignment.setConstraintValues(List.of(cv));
 
-			// ---- When ---- //
 			service.recordSystemRoleAssignmentAdded(userRole, assignment);
 
-			// ---- Then ---- //
-			ArgumentCaptor<HistoricItSystemAssignment> captor = ArgumentCaptor.forClass(HistoricItSystemAssignment.class);
-			verify(dao).save(captor.capture());
-
-			List<HistoricItSystemAssignmentConstraint> constraints = captor.getValue().getConstraints();
+			List<HistoricItSystemAssignmentConstraint> constraints = captureSavedRecords().getFirst().getConstraints();
 			assertThat(constraints).hasSize(1);
 			assertThat(constraints.getFirst().getConstraintName()).isEqualTo("It-system");
 			assertThat(constraints.getFirst().getConstraintValueType()).isEqualTo(ConstraintValueType.VALUE);
@@ -211,20 +219,14 @@ class HistoricItSystemAssignmentServiceTest {
 		@Test
 		@DisplayName("multiple constraints are all mapped")
 		void multipleConstraintsAreMapped() {
-			// ---- Given ---- //
 			SystemRoleAssignmentConstraintValue cv1 = createConstraintValue("It-system", ConstraintValueType.VALUE, "42");
 			SystemRoleAssignmentConstraintValue cv2 = createConstraintValue("Enhed", ConstraintValueType.INHERITED, null);
 			SystemRoleAssignment assignment = createSystemRoleAssignment(systemRole);
 			assignment.setConstraintValues(List.of(cv1, cv2));
 
-			// ---- When ---- //
 			service.recordSystemRoleAssignmentAdded(userRole, assignment);
 
-			// ---- Then ---- //
-			ArgumentCaptor<HistoricItSystemAssignment> captor = ArgumentCaptor.forClass(HistoricItSystemAssignment.class);
-			verify(dao).save(captor.capture());
-
-			assertThat(captor.getValue().getConstraints())
+			assertThat(captureSavedRecords().getFirst().getConstraints())
 				.hasSize(2)
 				.extracting(HistoricItSystemAssignmentConstraint::getConstraintName)
 				.containsExactlyInAnyOrder("It-system", "Enhed");
@@ -233,34 +235,22 @@ class HistoricItSystemAssignmentServiceTest {
 		@Test
 		@DisplayName("no constraints are created when constraintValues is empty")
 		void noConstraintsWhenEmpty() {
-			// ---- Given ---- //
 			SystemRoleAssignment assignment = createSystemRoleAssignment(systemRole);
 
-			// ---- When ---- //
 			service.recordSystemRoleAssignmentAdded(userRole, assignment);
 
-			// ---- Then ---- //
-			ArgumentCaptor<HistoricItSystemAssignment> captor = ArgumentCaptor.forClass(HistoricItSystemAssignment.class);
-			verify(dao).save(captor.capture());
-
-			assertThat(captor.getValue().getConstraints()).isEmpty();
+			assertThat(captureSavedRecords().getFirst().getConstraints()).isEmpty();
 		}
 
 		@Test
 		@DisplayName("no constraints are created when constraintValues is null")
 		void noConstraintsWhenNull() {
-			// ---- Given ---- //
 			SystemRoleAssignment assignment = createSystemRoleAssignment(systemRole);
 			assignment.setConstraintValues(null);
 
-			// ---- When ---- //
 			service.recordSystemRoleAssignmentAdded(userRole, assignment);
 
-			// ---- Then ---- //
-			ArgumentCaptor<HistoricItSystemAssignment> captor = ArgumentCaptor.forClass(HistoricItSystemAssignment.class);
-			verify(dao).save(captor.capture());
-
-			assertThat(captor.getValue().getConstraints()).isEmpty();
+			assertThat(captureSavedRecords().getFirst().getConstraints()).isEmpty();
 		}
 	}
 
@@ -271,7 +261,6 @@ class HistoricItSystemAssignmentServiceTest {
 		@Test
 		@DisplayName("same assignment with same constraints produces the same hash")
 		void sameAssignmentProducesSameHash() {
-			// ---- Given ---- //
 			SystemRoleAssignmentConstraintValue cv = createConstraintValue("It-system", ConstraintValueType.VALUE, "42");
 
 			SystemRoleAssignment assignment1 = createSystemRoleAssignment(systemRole);
@@ -280,60 +269,65 @@ class HistoricItSystemAssignmentServiceTest {
 			SystemRoleAssignment assignment2 = createSystemRoleAssignment(systemRole);
 			assignment2.setConstraintValues(List.of(createConstraintValue("It-system", ConstraintValueType.VALUE, "42")));
 
-			// ---- When ---- //
 			service.recordSystemRoleAssignmentAdded(userRole, assignment1);
 			service.recordSystemRoleAssignmentAdded(userRole, assignment2);
 
-			// ---- Then ---- //
-			ArgumentCaptor<HistoricItSystemAssignment> captor = ArgumentCaptor.forClass(HistoricItSystemAssignment.class);
-			verify(dao, Mockito.times(2)).save(captor.capture());
-
-			List<HistoricItSystemAssignment> saved = captor.getAllValues();
-			assertThat(saved.get(0).getRecordHash()).isEqualTo(saved.get(1).getRecordHash());
+			List<List<HistoricItSystemAssignment>> batches = captureAllSavedBatches();
+			assertThat(batches).hasSize(2);
+			assertThat(batches.get(0).getFirst().getRecordHash())
+				.isEqualTo(batches.get(1).getFirst().getRecordHash());
 		}
 
 		@Test
 		@DisplayName("different constraint value produces a different hash")
 		void differentConstraintValueProducesDifferentHash() {
-			// ---- Given ---- //
 			SystemRoleAssignment assignment1 = createSystemRoleAssignment(systemRole);
 			assignment1.setConstraintValues(List.of(createConstraintValue("It-system", ConstraintValueType.VALUE, "42")));
 
 			SystemRoleAssignment assignment2 = createSystemRoleAssignment(systemRole);
 			assignment2.setConstraintValues(List.of(createConstraintValue("It-system", ConstraintValueType.VALUE, "99")));
 
-			// ---- When ---- //
 			service.recordSystemRoleAssignmentAdded(userRole, assignment1);
 			service.recordSystemRoleAssignmentAdded(userRole, assignment2);
 
-			// ---- Then ---- //
-			ArgumentCaptor<HistoricItSystemAssignment> captor = ArgumentCaptor.forClass(HistoricItSystemAssignment.class);
-			verify(dao, Mockito.times(2)).save(captor.capture());
-
-			List<HistoricItSystemAssignment> saved = captor.getAllValues();
-			assertThat(saved.get(0).getRecordHash()).isNotEqualTo(saved.get(1).getRecordHash());
+			List<List<HistoricItSystemAssignment>> batches = captureAllSavedBatches();
+			assertThat(batches.get(0).getFirst().getRecordHash())
+				.isNotEqualTo(batches.get(1).getFirst().getRecordHash());
 		}
 
 		@Test
 		@DisplayName("different constraint name produces a different hash")
 		void differentConstraintNameProducesDifferentHash() {
-			// ---- Given ---- //
 			SystemRoleAssignment assignment1 = createSystemRoleAssignment(systemRole);
 			assignment1.setConstraintValues(List.of(createConstraintValue("It-system", ConstraintValueType.VALUE, "42")));
 
 			SystemRoleAssignment assignment2 = createSystemRoleAssignment(systemRole);
 			assignment2.setConstraintValues(List.of(createConstraintValue("Enhed", ConstraintValueType.VALUE, "42")));
 
-			// ---- When ---- //
 			service.recordSystemRoleAssignmentAdded(userRole, assignment1);
 			service.recordSystemRoleAssignmentAdded(userRole, assignment2);
 
-			// ---- Then ---- //
-			ArgumentCaptor<HistoricItSystemAssignment> captor = ArgumentCaptor.forClass(HistoricItSystemAssignment.class);
-			verify(dao, Mockito.times(2)).save(captor.capture());
+			List<List<HistoricItSystemAssignment>> batches = captureAllSavedBatches();
+			assertThat(batches.get(0).getFirst().getRecordHash())
+				.isNotEqualTo(batches.get(1).getFirst().getRecordHash());
+		}
 
-			List<HistoricItSystemAssignment> saved = captor.getAllValues();
-			assertThat(saved.get(0).getRecordHash()).isNotEqualTo(saved.get(1).getRecordHash());
+		@Test
+		@DisplayName("multiple responsibles produce one record with a collection id (fan-out happens at attestation-creation time)")
+		void differentResponsibleProducesDifferentHash() {
+			userRole.setRoleAssignmentAttestationByAttestationResponsible(true);
+			itSystem.addAttestationResponsible(createUser("uuid-a"));
+			itSystem.addAttestationResponsible(createUser("uuid-b"));
+			given(attestationResponsibleCollectionDao.findFirstByItSystemId(anyLong()))
+				.willReturn(Optional.of(new AttestationResponsibleCollection(42L, itSystem.getId(), List.of("uuid-a", "uuid-b"))));
+
+			SystemRoleAssignment assignment = createSystemRoleAssignment(systemRole);
+
+			service.recordSystemRoleAssignmentAdded(userRole, assignment);
+
+			List<HistoricItSystemAssignment> saved = captureSavedRecords();
+			assertThat(saved).hasSize(1);
+			assertThat(saved.getFirst().getResponsibleCollectionId()).isEqualTo(42L);
 		}
 	}
 
@@ -393,29 +387,30 @@ class HistoricItSystemAssignmentServiceTest {
 	class RecordSystemRoleAssignmentEdited {
 
 		@Test
-		@DisplayName("closes the pre-edit hash and inserts a fresh record when hash changes")
+		@DisplayName("closes every pre-edit hash variant and inserts a fresh record when hash changes")
 		void closesAndInsertsOnRealEdit() {
 			// ---- Given ---- //
 			SystemRoleAssignment assignment = createSystemRoleAssignment(systemRole);
-			String preEditHash = "some-other-hash-that-differs-from-current";
+			List<String> preEditHashes = List.of("pre-edit-hash-current", "pre-edit-hash-legacy");
 
 			// ---- When ---- //
-			service.recordSystemRoleAssignmentEdited(userRole, assignment, preEditHash);
+			service.recordSystemRoleAssignmentEdited(userRole, assignment, preEditHashes);
 
 			// ---- Then ---- //
-			verify(dao).closeOpenByRecordHash(eq(preEditHash), any());
+			verify(dao).closeOpenByRecordHash(eq("pre-edit-hash-current"), any());
+			verify(dao).closeOpenByRecordHash(eq("pre-edit-hash-legacy"), any());
 			verify(dao).save(any(HistoricItSystemAssignment.class));
 		}
 
 		@Test
-		@DisplayName("does nothing when the new hash equals the pre-edit hash")
+		@DisplayName("does nothing when the new hash matches one of the pre-edit hash variants")
 		void noopWhenHashUnchanged() {
 			// ---- Given ---- //
 			SystemRoleAssignment assignment = createSystemRoleAssignment(systemRole);
-			String preEditHash = service.computeRecordHash(userRole, assignment);
+			List<String> preEditHashes = service.computeRecordHashVariants(userRole, assignment);
 
 			// ---- When ---- //
-			service.recordSystemRoleAssignmentEdited(userRole, assignment, preEditHash);
+			service.recordSystemRoleAssignmentEdited(userRole, assignment, preEditHashes);
 
 			// ---- Then ---- //
 			verify(dao, never()).closeOpenByRecordHash(any(), any());
@@ -430,36 +425,81 @@ class HistoricItSystemAssignmentServiceTest {
 		@Test
 		@DisplayName("closes the record by the correct hash with a non-null timestamp")
 		void closesCorrectRecordByHash() {
-			// ---- Given ---- //
 			SystemRoleAssignment assignment = createSystemRoleAssignment(systemRole);
 
-			// ---- When ---- //
 			service.recordSystemRoleAssignmentRemoved(userRole, assignment);
 
-			// ---- Then ---- //
 			verify(dao).closeOpenByRecordHash(any(String.class), any());
 		}
 
 		@Test
 		@DisplayName("the hash used to close matches the hash that would be created for the same assignment")
 		void closedHashMatchesExpectedHash() {
-			// ---- Given ---- //
 			SystemRoleAssignment assignment = createSystemRoleAssignment(systemRole);
 
-			// Capture the hash from an add to know what hash remove should close
 			service.recordSystemRoleAssignmentAdded(userRole, assignment);
-			ArgumentCaptor<HistoricItSystemAssignment> addCaptor = ArgumentCaptor.forClass(HistoricItSystemAssignment.class);
-			verify(dao).save(addCaptor.capture());
-			String expectedHash = addCaptor.getValue().getRecordHash();
+			String expectedHash = captureSavedRecords().getFirst().getRecordHash();
 
-			// ---- When ---- //
 			service.recordSystemRoleAssignmentRemoved(userRole, assignment);
 
-			// ---- Then ---- //
 			ArgumentCaptor<String> hashCaptor = ArgumentCaptor.forClass(String.class);
 			verify(dao).closeOpenByRecordHash(hashCaptor.capture(), any());
 
 			assertThat(hashCaptor.getValue()).isEqualTo(expectedHash);
+		}
+
+		@Test
+		@DisplayName("with a responsible collection, closes both the current hash and the legacy hash without collection id")
+		void closesBothHashVariantsWhenCollectionExists() {
+			// Dækker deployment-vinduet: åbne rækker skrevet før collectionen fandtes (eller før
+			// fixet af flag-gatingen) står med legacy-hashen og skal stadig kunne lukkes af et
+			// fjern-event, indtil reparations-tasken har været forbi.
+			itSystem.addAttestationResponsible(createUser("uuid-a"));
+			given(attestationResponsibleCollectionDao.findFirstByItSystemId(anyLong()))
+				.willReturn(Optional.of(new AttestationResponsibleCollection(42L, itSystem.getId(), List.of("uuid-a"))));
+			SystemRoleAssignment assignment = createSystemRoleAssignment(systemRole);
+			String currentHash = service.computeRecordHash(userRole, assignment);
+
+			service.recordSystemRoleAssignmentRemoved(userRole, assignment);
+
+			ArgumentCaptor<String> hashCaptor = ArgumentCaptor.forClass(String.class);
+			verify(dao, Mockito.times(2)).closeOpenByRecordHash(hashCaptor.capture(), any());
+			assertThat(hashCaptor.getAllValues()).contains(currentHash);
+			assertThat(hashCaptor.getAllValues()).doesNotHaveDuplicates();
+		}
+	}
+
+	@Nested
+	@DisplayName("computeRecordHashVariants")
+	class ComputeRecordHashVariants {
+
+		@Test
+		@DisplayName("returns current and legacy hash when the IT system has a responsible collection")
+		void returnsBothVariantsWithCollection() {
+			SystemRoleAssignment assignment = createSystemRoleAssignment(systemRole);
+			given(attestationResponsibleCollectionDao.findFirstByItSystemId(anyLong()))
+				.willReturn(Optional.empty());
+			String legacyHash = service.computeRecordHash(userRole, assignment);
+
+			given(attestationResponsibleCollectionDao.findFirstByItSystemId(anyLong()))
+				.willReturn(Optional.of(new AttestationResponsibleCollection(42L, itSystem.getId(), List.of("uuid-a"))));
+			String currentHash = service.computeRecordHash(userRole, assignment);
+
+			List<String> variants = service.computeRecordHashVariants(userRole, assignment);
+
+			assertThat(variants).containsExactly(currentHash, legacyHash);
+		}
+
+		@Test
+		@DisplayName("returns a single hash when the IT system has no responsible collection")
+		void returnsSingleVariantWithoutCollection() {
+			SystemRoleAssignment assignment = createSystemRoleAssignment(systemRole);
+			given(attestationResponsibleCollectionDao.findFirstByItSystemId(anyLong()))
+				.willReturn(Optional.empty());
+
+			List<String> variants = service.computeRecordHashVariants(userRole, assignment);
+
+			assertThat(variants).containsExactly(service.computeRecordHash(userRole, assignment));
 		}
 	}
 
@@ -516,6 +556,165 @@ class HistoricItSystemAssignmentServiceTest {
 			// ---- Then ---- //
 			assertThat(result).isFalse();
 			verify(dao, never()).save(any(HistoricItSystemAssignment.class));
+		}
+	}
+
+	@Nested
+	@DisplayName("repairResponsibleCollectionRow")
+	class RepairResponsibleCollectionRow {
+
+		private static final long COLLECTION_ID = 42L;
+
+		/** Åben historic-række hvis recordHash er beregnet med det angivne collection-id. */
+		private HistoricItSystemAssignment openRow(Long hashedWithCollectionId, Long storedCollectionId) {
+			given(attestationResponsibleCollectionDao.findFirstByItSystemId(itSystem.getId()))
+				.willReturn(hashedWithCollectionId == null
+					? Optional.empty()
+					: Optional.of(new AttestationResponsibleCollection(hashedWithCollectionId, itSystem.getId(), List.of("responsible-uuid"))));
+			String hash = service.computeRecordHash(userRole, createSystemRoleAssignment(systemRole));
+
+			return HistoricItSystemAssignment.builder()
+				.id(1L)
+				.recordHash(hash)
+				.validFrom(java.time.LocalDateTime.now().minusDays(10))
+				.validTo(null)
+				.itSystemId(itSystem.getId())
+				.userRoleId(userRole.getId())
+				.systemRoleId(systemRole.getId())
+				.constraints(new java.util.ArrayList<>())
+				.responsibleCollectionId(storedCollectionId)
+				.build();
+		}
+
+		@Test
+		@DisplayName("stamps collection id and recomputes hash on a row written without one")
+		void repairsRowMissingCollectionId() {
+			HistoricItSystemAssignment row = openRow(null, null);
+			given(dao.findById(1L)).willReturn(Optional.of(row));
+			given(attestationResponsibleCollectionDao.findFirstByItSystemId(itSystem.getId()))
+				.willReturn(Optional.of(new AttestationResponsibleCollection(COLLECTION_ID, itSystem.getId(), List.of("responsible-uuid"))));
+			String expectedHash = service.computeRecordHash(userRole, createSystemRoleAssignment(systemRole));
+			given(dao.existsByRecordHashAndValidToIsNull(expectedHash)).willReturn(false);
+
+			boolean changed = service.repairResponsibleCollectionRow(1L);
+
+			assertThat(changed).isTrue();
+			assertThat(row.getResponsibleCollectionId()).isEqualTo(COLLECTION_ID);
+			assertThat(row.getRecordHash()).isEqualTo(expectedHash);
+			assertThat(row.getValidTo()).isNull();
+			verify(dao).save(row);
+		}
+
+		@Test
+		@DisplayName("recomputes a stale hash on a row where collection id was SQL-backfilled without rehash")
+		void repairsStaleHashAfterSqlBackfill() {
+			// Hash beregnet med NULL, men collection-id efterfølgende sat via SQL-backfill.
+			HistoricItSystemAssignment row = openRow(null, COLLECTION_ID);
+			given(dao.findById(1L)).willReturn(Optional.of(row));
+			given(attestationResponsibleCollectionDao.findFirstByItSystemId(itSystem.getId()))
+				.willReturn(Optional.of(new AttestationResponsibleCollection(COLLECTION_ID, itSystem.getId(), List.of("responsible-uuid"))));
+			String expectedHash = service.computeRecordHash(userRole, createSystemRoleAssignment(systemRole));
+			given(dao.existsByRecordHashAndValidToIsNull(expectedHash)).willReturn(false);
+
+			boolean changed = service.repairResponsibleCollectionRow(1L);
+
+			assertThat(changed).isTrue();
+			assertThat(row.getRecordHash()).isEqualTo(expectedHash);
+			verify(dao).save(row);
+		}
+
+		@Test
+		@DisplayName("does nothing when the row is already consistent")
+		void noopWhenConsistent() {
+			HistoricItSystemAssignment row = openRow(COLLECTION_ID, COLLECTION_ID);
+			given(dao.findById(1L)).willReturn(Optional.of(row));
+
+			boolean changed = service.repairResponsibleCollectionRow(1L);
+
+			assertThat(changed).isFalse();
+			assertThat(row.getResponsibleCollectionId()).isEqualTo(COLLECTION_ID);
+			verify(dao, never()).save(any(HistoricItSystemAssignment.class));
+		}
+
+		@Test
+		@DisplayName("closes the row as a duplicate when another open row already has the target hash")
+		void closesDuplicateWhenTargetHashExists() {
+			HistoricItSystemAssignment row = openRow(null, null);
+			given(dao.findById(1L)).willReturn(Optional.of(row));
+			given(attestationResponsibleCollectionDao.findFirstByItSystemId(itSystem.getId()))
+				.willReturn(Optional.of(new AttestationResponsibleCollection(COLLECTION_ID, itSystem.getId(), List.of("responsible-uuid"))));
+			String originalHash = row.getRecordHash();
+			given(dao.existsByRecordHashAndValidToIsNull(any())).willReturn(true);
+
+			boolean changed = service.repairResponsibleCollectionRow(1L);
+
+			assertThat(changed).isTrue();
+			assertThat(row.getValidTo()).isNotNull();
+			assertThat(row.getResponsibleCollectionId()).isNull();
+			assertThat(row.getRecordHash()).isEqualTo(originalHash);
+			verify(dao).save(row);
+		}
+
+		@Test
+		@DisplayName("does nothing for closed or missing rows")
+		void noopForClosedOrMissingRows() {
+			HistoricItSystemAssignment closedRow = openRow(null, null);
+			closedRow.setValidTo(java.time.LocalDateTime.now().minusDays(1));
+			given(dao.findById(1L)).willReturn(Optional.of(closedRow));
+			given(dao.findById(2L)).willReturn(Optional.empty());
+
+			assertThat(service.repairResponsibleCollectionRow(1L)).isFalse();
+			assertThat(service.repairResponsibleCollectionRow(2L)).isFalse();
+			verify(dao, never()).save(any(HistoricItSystemAssignment.class));
+		}
+	}
+
+	@Nested
+	@DisplayName("repairResponsibleCollectionForItSystem")
+	class RepairResponsibleCollectionForItSystem {
+
+		@Test
+		@DisplayName("repairs every open row for the IT system and returns the number of changed rows")
+		void repairsAllOpenRowsForSystem() {
+			AttestationResponsibleCollection collection = new AttestationResponsibleCollection(42L, itSystem.getId(), List.of("responsible-uuid"));
+
+			// Række skrevet uden collection-id (hash beregnet med null).
+			given(attestationResponsibleCollectionDao.findFirstByItSystemId(itSystem.getId())).willReturn(Optional.empty());
+			String nullHash = service.computeRecordHash(userRole, createSystemRoleAssignment(systemRole));
+			HistoricItSystemAssignment staleRow = HistoricItSystemAssignment.builder()
+				.id(1L)
+				.recordHash(nullHash)
+				.validFrom(java.time.LocalDateTime.now().minusDays(10))
+				.itSystemId(itSystem.getId())
+				.userRoleId(userRole.getId())
+				.systemRoleId(systemRole.getId())
+				.constraints(new java.util.ArrayList<>())
+				.build();
+
+			given(attestationResponsibleCollectionDao.findFirstByItSystemId(itSystem.getId())).willReturn(Optional.of(collection));
+			String expectedHash = service.computeRecordHash(userRole, createSystemRoleAssignment(systemRole));
+			// Allerede konsistent række.
+			HistoricItSystemAssignment consistentRow = HistoricItSystemAssignment.builder()
+				.id(2L)
+				.recordHash(expectedHash)
+				.validFrom(java.time.LocalDateTime.now().minusDays(10))
+				.itSystemId(itSystem.getId())
+				.userRoleId(userRole.getId())
+				.systemRoleId(systemRole.getId())
+				.constraints(new java.util.ArrayList<>())
+				.responsibleCollectionId(42L)
+				.build();
+
+			given(dao.findByItSystemIdAndValidToIsNull(itSystem.getId())).willReturn(List.of(staleRow, consistentRow));
+			given(dao.existsByRecordHashAndValidToIsNull(expectedHash)).willReturn(false);
+
+			int changed = service.repairResponsibleCollectionForItSystem(itSystem.getId());
+
+			assertThat(changed).isEqualTo(1);
+			assertThat(staleRow.getResponsibleCollectionId()).isEqualTo(42L);
+			assertThat(staleRow.getRecordHash()).isEqualTo(expectedHash);
+			verify(dao).save(staleRow);
+			verify(dao, never()).save(consistentRow);
 		}
 	}
 }
